# pwarp

./: .gitignore  Makefile  Makefile.am  configure.ac
src/: Makefile.am  lex.h  lex.l  main.c  parse.y
test/: all.sh
test/samples/: case.pp  chaining.pp  define.pp  expressions.pp  strings.pp
tests/: Makefile.am  all.sh  check_parse.c  check_tinin.c  suites.h
tests/samples/: assignment.pp  class.pp  expressions.pp  if.pp  resource.pp
